# magic-agent

./: .gitignore  MagicAgent.sln  README.md  instructions.md
backend-py/: .env.example  Dockerfile  README.md  pyproject.toml
backend-py/src/: config.py  main.py
backend-py/src/agent_runtime/: __init__.py  executor.py  graph.py  progress_sink.py  state.py  workflow_executor.py  workflow_graph_builder.py
backend-py/src/agent_runtime/nodes/: chat_node.py  input_node.py  output_node.py  tool_node.py
backend-py/src/api/routes/: __init__.py  agent_definitions.py  agents.py  health.py  runs.py  workflows.py
backend-py/src/application/agents/: exceptions.py  message.py  run_result.py  schemas.py  service.py  validator.py
backend-py/src/application/runs/: progress.py  schemas.py  service.py
backend-py/src/application/workflows/: service.py
backend-py/src/infrastructure/conversation/: store.py
backend-py/src/infrastructure/diagnostics/: store.py
backend-py/src/infrastructure/llm/: factory.py
backend-py/src/infrastructure/mcp/: client.py  registry.py  tool_builder.py  (+1 more)
backend-py/src/lib/: logging.py  security.py
backend-py/tests/: conftest.py  test_security.py
backend-py/tests/agent_runtime/: test_executor_stream_sink.py  test_progress_sink.py  test_step_llm_config.py  test_workflow_executor.py
backend-py/tests/api/: test_debug_route.py  test_runs_route.py  test_runs_route_field_names.py
backend-py/tests/integration/: test_agent_definitions_routes.py  test_agents_json_parity.py  test_web_search_conversation_memory.py  test_web_search_tavily_agent.py
(+165 files in other folders)
